<resources>
    <string name="app_name">StockMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="accion_opciones">Opciones</string>
    <string name="title_activity_listas">Listas</string>
    <string name="title_activity_lista_articulos">ListaArticulos</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista_add">ListaAdd</string>
    <string name="lista_add_nombre">Nombre:</string>
    <string name="lista_add_elementos">Elementos:</string>
    <string name="lista_add_supermercado">Supermercado:</string>
    <string name="title_activity_lista_de_articulos">ListaDeArticulos</string>

    <string name="Nombre">Nombre</string>
    <string name="Tipo">Tipo</string>
    <string name="Precio">Precio</string>
    <string name="Supermercado">Supermercado</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Marca">Marca</string>
    <string name="Cantidad">Cantidad</string>
    <string name="Mas">+</string>
    <string name="title_activity_catalogo_articulos">CatalogoArticulos</string>


    <string name="search_result">Resultado de búsqueda</string>
    <string name="search_hint">Buscar...</string>
    <string name="menu_search">Buscar</string>
    <string name="title_activity_ajustes_prueba">AjustesPrueba</string>
    <string name="title_activity_preferencias">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="Listas">Listas</string>
    <string name="Actual">"Actual: "</string>
    <string name="Stock">Stock</string>
    <string name="Articulos">Articulos</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Nombre_lista">Nombre de la lista</string>

    <string name="Lista">Lista</string>
    <string name="StockMe">Stock Me</string>
    <string name="Nueva_lista">Nueva lista</string>
    <string name="Organiza_tu_vida">Organiza tu vida</string>
    <string name="Fecha">Fecha</string>
    <string name="Minimo">Mínimo</string>

    <string name="Nuevo_supermercado">Nuevo supermercado</string>
    <string name="A_pagar">"A pagar: "</string>
    <string name="Marcas">Marcas</string>
    <string name="Arts">Arts.</string>
    <string name="Total">"Total: "</string>
    <string name="Añadir_desde_catalogo">Añadir desde catálogo</string>
    <string name="Nuevo_precio">Nuevo precio</string>

    <string name="Otros">Otros</string>
    <string name="Dulces">Dulces</string>
    <string name="Drogeria">Droguería</string>
    <string name="Mascotas">Mascotas</string>
    <string name="Congelados">Congelados</string>
    <string name="Farmacia">Farmacia</string>
    <string name="Frutas">Frutas</string>
    <string name="Verduras">Verduras</string>
    <string name="Lacteos">Lácteos</string>
    <string name="Legumbres">Legumbres</string>
    <string name="Panadería">Panadería</string>
    <string name="Conservas">Conservas</string>
    <string name="Carniceria">Carnicería</string>
    <string name="Pescaderia">Pescadería</string>
    <string name="Salsas_especias">Salsas y especias</string>
    <string name="Bebidas">Bebidas</string>

    <string name="No_se_ha_podido_eliminar_articulo">No se ha podido eliminar el artículo</string>
    <string name="Articulo_eliminado">Artículo eliminado</string>
    <string name="Quieres_eliminar_articulo">¿Quieres eliminar el artículo?</string>
    <string name="No_se_ha_podido_eliminar_listas">No se ha podido eliminar la lista</string>
    <string name="Lista_eliminada">Lista eliminada</string>
    <string name="Quieres_eliminar_lista">¿Quieres eliminar la lista?</string>

    <string name="Editar_articulo">Editar artículo</string>
    <string name="Nombre_vacio">Nombre vacío</string>
    <string name="Ya_existe">"Ya existe "</string>
    <string name="Comprado">"Comprado: "</string>
    <string name="Eliminar">"¿Eliminar: "</string>

    <string name="Nuevo_nombre">Nuevo nombre</string>
    <string name="Lista_renombrada">Lista renombrada</string>
    <string name="Del_stock">" del stock?"</string>

    <string name="Unidades">" unidades"</string>
    <string name="Nuevo_minimo">Nuevo mínimo</string>
    <string name="Conservar">"¿Conservar "</string>
    <string name="En_el_stock">" en el Stock?"</string>
    <string name="Agotado">" agotado"</string>
    <string name="Elimina">Eliminar</string>
    <string name="Conserva">Conservar</string>

    <string name="Ha_alcanzado_el_minimo_establecido">" ha alcanzado el mínimo establecido"</string>
    <string name="Añadir">"¿Añadir "</string>
    <string name="A_una_lista_compra">" a una lista de la compra?"</string>
    <string name="Bajo_minimos">Bajo mínimos</string>

    <string name="Añadir_articulo">Añadir artículo</string>
    <string name="Se_ha_creado_un_nuevo_articulo">Se ha creado un nuevo artículo</string>
    <string name="No_se_ha_podido_crear_articulo">No se ha podido crear el artículo</string>
    <string name="Ya_esta_articulo_lista_pregunta">Ya está el artículo en la lista. ¿Quieres sumar la cantidad?</string>
    <string name="Articulo_existente">Artículo existente</string>

    <string name="Precio_actualizado">Precio actualizado</string>
    <string name="Debes_insertar_nombre">Debes insertar un nombre</string>
    <string name="Debes_insertar_marca">Debes insertar una marca</string>
    <string name="Debes_insertar_cantidad">Debes insertar una cantidad mayor que 0</string>
    <string name="El_precio_mayor_cero">El precio debe ser mayor o igual a 0</string>
    <string name="No_se_ha_podido_cargar_lista">No se ha podido cargar la lista</string>
    <string name="Catalogo">Catálogo</string>

    <string name="Todos">Todos</string>
    <string name="Tipos">Tipos</string>
    <string name="Crear_lista">Crear lista</string>
    <string name="Ya_existe_la_lista">"Ya existe la lista: "</string>
    <string name="Añadir_stock">Añadir Stock</string>

    <string name="Articulo_añadido">Artículo añadido</string>
    <string name="No_se_ha_podido_añadir_articulo">No se ha podido añadir el artículo</string>
    <string name="El_articulo_esta_pregunta">"El articulo que has introducido ya está en Stock
¿Deseas añadir "</string>
    <string name="Unidades_al_stock">" unidades al Stock?"</string>

    <string name="Unidades_añadidas">Unidades añadidas</string>
    <string name="Añadir_stock_a_lista">Añadir Stock a lista</string>

    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Confirmacion">Confirmación</string>

    <string name="Selecciona_el_idioma">Selecciona el idioma</string>
    <string name="Selecciona_la_moneda">Selecciona la moneda</string>
    <string name="Selecciona_el_orden">Selecciona el orden</string>
    <string name="Idioma">Idioma</string>
    <string name="Moneda">Moneda</string>
    <string name="Orden_de_las_listas">Orden de los artículos en listas</string>

    <string name="Español">Español</string>
    <string name="Ingles">Inglés</string>
    <string name="Ascendente">Ascendente</string>
    <string name="Descendente">Descendente</string>

    <string name="Mostrar_precio_lista_compra_titulo">Mostrar precios</string>
    <string name="Mostrar_precio_lista_compra_descripcion">Mostrar/Ocultar precios en las listas de la compra</string>

    <string name="Mostrar_marca_stock_titulo">Mostrar marcas en stock</string>
    <string name="Mostrar_marca_stock_descripcion">Mostrar/Ocultar las marcas en el stock</string>

    <string name="Tuto_lista1">Aquí saldrán las listas de la compra</string>
    <string name="Tuto_lista2">Pulsa en este botón para crear una lista nueva</string>
    <string name="Tuto_lista3">Esto es todo, añade las listas que quieras</string>
    <string name="Tuto_stock1">Aquí saldrán los artículos y su cantidad en tu despensa</string>
    <string name="Tuto_stock2">Pulsa en este botón para añadir un artículo a tu despensa</string>
    <string name="Tuto_stock3">Esto es todo, añade los artículos que quieras, los colores indicarán sus estados</string>
    <string name="Tuto_articulo1">Aquí saldrá un catálogo con todos los artículos, ordénalos por tipos en la pestaña de tipos</string>
    <string name="Tuto_articulo2">Pulsa en este botón para añadir un artículo al catálogo</string>
    <string name="Tuto_articulo3">Utiliza el buscador para encontrar los artículos</string>
    <string name="Tuto_articulo4">Pulsa para quitar la búsqueda previa</string>
    <string name="Tuto_articulo5">Esto es todo, añade los artículos que quieras</string>

    <string name="Activar_tutoriales">¿Activar tutoriales?</string>
    <string name="Tutoriales">Tutoriales</string>
    <string name="Tutoriales_reset">Tutoriales restablecidos</string>

    <string name="Pregunta_salida">¿Seguro que quieres salir?</string>
    <string name="Precio_actual">Actual</string>
    <string name="Preferencias">Preferencias</string>


</resources>
