<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listas"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/Listas" />
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/Stock" />
        <item
            android:id="@+id/nav_articulos"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/Articulos" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Ajustes" />
    </group>

</menu>
