<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="stockme.stockme.ArticulosAdd"
    tools:showIn="@layout/activity_articulos_add"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articulos_add_et_nombre"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/Nombre"
            android:layout_alignEnd="@+id/articulos_add_btn_aceptar"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tipo"
            android:id="@+id/articulos_add_tv_tipo"
            android:textSize="20sp"
            android:layout_marginTop="38dp"
            android:layout_below="@+id/articulos_add_et_cantidad"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articulos_add_sp_tipos"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/articulos_add_tv_tipo"
            android:layout_alignParentLeft="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/articulos_add_et_precio"
            android:hint="@string/Precio"
            android:textAlignment="center"
            android:layout_alignTop="@+id/articulos_add_et_cantidad"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/articulos_add_et_cantidad" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Supermercado"
            android:id="@+id/articulos_add_tv_supermercado"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/articulos_add_sp_tipos"
            android:layout_alignParentLeft="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articulos_add_sp_supermercado"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/articulos_add_tv_supermercado"
            android:layout_alignParentLeft="true" />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:minWidth="60dp"
            android:maxWidth="60dp"
            android:minHeight="60dp"
            android:maxHeight="60dp"
            android:id="@+id/articulos_add_btn_aceptar"
            android:textSize="23sp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_done_black_24dp"
            android:background="@drawable/esquinas_boton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/articulos_add_et_cantidad"
            android:hint="@string/Cantidad"
            android:textAlignment="center"
            android:layout_below="@+id/articulos_add_atv_marcas"
            android:layout_alignParentStart="true"
            />

        <Button
            android:background="@drawable/esquinas_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Añadir_desde_catalogo"
            android:textAlignment="center"
            android:minWidth="140dp"
            android:maxWidth="160dp"
            android:id="@+id/articulos_add_btn_catalogo"
            android:textSize="15dp"
            android:layout_below="@+id/articulos_add_sp_supermercado"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articulos_add_atv_marcas"
            android:layout_below="@+id/articulos_add_et_nombre"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/Marcas"
            android:textAlignment="center" />
    </RelativeLayout>
</ScrollView>
