<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="stockme.stockme.ArticulosAdd"
    tools:showIn="@layout/activity_articulo_simple_add"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articulo_simple_add_et_nombre"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Nombre"
        android:layout_alignEnd="@+id/articulo_simple_add_btn_aceptar"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tipo"
        android:id="@+id/articulo_simple_add_tv_tipo"
        android:textSize="20sp"
        android:layout_marginTop="38dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/articulo_simple_add_atv_marcas" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articulo_simple_add_sp_tipos"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/articulo_simple_add_tv_tipo"
        android:layout_alignParentLeft="true" />

    <Button
        android:background="@drawable/esquinas_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aceptar"
        android:textAlignment="center"
        android:minWidth="140dp"
        android:maxWidth="140dp"
        android:id="@+id/articulo_simple_add_btn_aceptar"
        android:textSize="23sp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:background="@drawable/esquinas_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar"
        android:textAlignment="center"
        android:minWidth="140dp"
        android:maxWidth="140dp"
        android:id="@+id/articulo_simple_add_btn_cancelar"
        android:textSize="23sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articulo_simple_add_atv_marcas"
        android:layout_below="@+id/articulo_simple_add_et_nombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="Marcas"
        android:textAlignment="center" />

</RelativeLayout>