<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/esquinas" >

    <ImageButton
        android:id="@+id/listitem_stock_bt_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="#00ffffff"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:minWidth="30dp"
        android:padding="5dp"
        android:src="@drawable/ic_delete_black_24dp"
        android:tint="#707e86" />

    <TextView
        android:id="@+id/listitem_stock_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/listitem_stock_bt_delete"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/Nombre"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/listitem_stock_marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/listitem_stock_tv_minimo"
        android:layout_marginLeft="3dp"
        android:layout_toEndOf="@+id/listitem_stock_tv_minimo"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingLeft="10dp"
        android:text="@string/Marca"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/listitem_stock_minimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/listitem_stock_nombre"
        android:layout_below="@+id/listitem_stock_nombre"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/Minimo" />

    <TextView
        android:id="@+id/listitem_stock_tv_minimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listitem_stock_nombre"
        android:layout_marginLeft="3dp"
        android:layout_toEndOf="@+id/listitem_stock_minimo"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/Precio"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:text="0" />

    <ImageButton
        android:id="@+id/listitem_stock_mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/listitem_stock_minimo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#00ffffff"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:maxWidth="40dp"
        android:minWidth="30dp"
        android:src="@drawable/ic_add_black_18dp" />

    <TextView
        android:id="@+id/listitem_stock_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/listitem_stock_mas"
        android:layout_alignTop="@+id/listitem_stock_mas"
        android:layout_toStartOf="@+id/listitem_stock_mas"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number"
        android:maxWidth="45dp"
        android:minWidth="45dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="35dp" />

    <ImageButton
        android:id="@+id/listitem_stock_menos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/listitem_stock_mas"
        android:layout_alignTop="@+id/listitem_stock_mas"
        android:layout_toStartOf="@+id/listitem_stock_cantidad"
        android:background="#00ffffff"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:maxWidth="40dp"
        android:minWidth="30dp"
        android:src="@drawable/ic_remove_black_18dp" />

</RelativeLayout>